--- a/app/src/main/res/layout/fragment_amplitude.xml
+++ b/app/src/main/res/layout/fragment_amplitude.xml
@@ -60,14 +60,14 @@
                         android:orientation="horizontal">
 
                         <ImageButton
-                            android:id="@+id/imageButtonDate"
+                            android:id="@+id/imageButtonCalcul"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:cropToPadding="true"
                             android:src="@drawable/ic_baseline_calendar_today_24" />
 
                         <TextView
-                            android:id="@+id/tVDateDebut"
+                            android:id="@+id/tvLongueurDispo"
                             android:layout_width="100dp"
                             android:layout_height="match_parent"
                             android:background="@drawable/bg_rectangle_order"
@@ -151,7 +151,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/tvDateReposReduit"
+                            android:id="@+id/tvNombrePalettes"
                             android:layout_width="110dp"
                             android:layout_height="match_parent"
                             android:layout_marginRight="6dp"
