--- a/app/src/main/res/layout/fragment_temps_trajet.xml
+++ b/app/src/main/res/layout/fragment_temps_trajet.xml
@@ -152,6 +152,15 @@
 
                 </LinearLayout>
 
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:paddingTop="40dp"
+                    android:paddingBottom="40dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/image" />
+
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
